--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -118,37 +118,37 @@ pdfpagemode=UseNone]{hyperref}
 \chapter{Theoretical background}
 \label{sec:theory}
 
-%\input{theory/workflow}	
-%\input{theory/morphology}
-%\input{theory/fragments}
-%\input{theory/neighborlist}
-%\input{theory/reorganization_energy}
-%\input{theory/energetic_disorder}
-%\input{theory/gdma}
-%\input{theory/thole}
-%\input{theory/electronic_couplings}
-\input{theory/rate}
-%\input{theory/kmc}
-%\input{theory/nondispersive}
-%\input{theory/analysis}
-%\input{theory/correlations}
-%\input{theory/idft}
+\input{theory/workflow}	
+\input{theory/morphology}
+\input{theory/fragments}
+\input{theory/neighborlist}
+\input{theory/reorganization_energy}
+\input{theory/energetic_disorder}
+\input{theory/gdma}
+\input{theory/thole}
+\input{theory/electronic_couplings}
+input{theory/rate}
+\input{theory/kmc}
+\input{theory/nondispersive}
+\input{theory/analysis}
+\input{theory/correlations}
+\input{theory/dft}
 
 \chapter{Input and output files}
 \label{sec:io}
-%\input{input/topology_atomistic}
-%\input{input/topology_coarsegrained}
+\input{input/topology_atomistic}
+\input{input/topology_coarsegrained}
 
-%\input{input/topology_conjseg}
-%\input{input/orbitals_zindo}
-%\input{input/header_edft}
-%\input{input/header_idft}
-%\input{input/output_dft}
-%\input{input/statefile}
+\input{input/topology_conjseg}
+\input{input/orbitals_zindo}
+\input{input/header_edft}
+\input{input/header_idft}
+\input{input/output_dft}
+\input{input/statefile}
 
 \input{reference/reference}
 
-%\appendix
+\appendix
 %\input{appendix/moo_standalone}
 
 \nolinenumbers
